--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
   push:
     tags:
-      - "v*.*.*"
+      - "v*.*.*"   # triggers on tags like v0.0.1, v1.2.3
 
 jobs:
   build:
@@ -15,19 +15,37 @@ jobs:
     env:
       CGO_ENABLED: 0
     steps:
-      - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-      - uses: actions/setup-go@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
           go-version: "1.22"
-      - name: Build
+
+      - name: Build & Package
+        env:
+          APP_NAME: commandline_casino
+          MAIN_PATH: .   # your main.go is at repo root
         run: |
-          OUT="commandline_casino_${{ github.ref_name }}_${{ matrix.goos }}_${{ matrix.goarch }}"
+          set -euo pipefail
+
+          OUT="${APP_NAME}_${{ github.ref_name }}_${{ matrix.goos }}_${{ matrix.goarch }}"
           EXT=$([ "${{ matrix.goos }}" = "windows" ] && echo ".exe" || echo "")
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} \
-            go build -ldflags "-s -w" -o "$OUT/$OUT$EXT" ./cmd/commandline_casino
-          cp LICENSE README.md "$OUT" || true
-          (cd "$OUT" && zip -r "../$OUT.zip" .)
+
+          mkdir -p "$OUT"
+
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} CGO_ENABLED=${CGO_ENABLED} \
+            go build -ldflags "-s -w -X main.version=${GITHUB_REF_NAME}" \
+            -o "$OUT/${APP_NAME}${EXT}" \
+            "$MAIN_PATH"
+
+          cp README.md LICENSE "$OUT" 2>/dev/null || true
+
+          (cd "$OUT" && zip -r "../${OUT}.zip" .)
+
       - name: Upload artifact (to pass to release job)
         uses: actions/upload-artifact@v4
         with:
@@ -38,15 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      contents: write
+      contents: write   # required to create a GitHub Release and upload assets
     steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: bins
-          path: ./dist
-      - name: Create Release
-        id: create
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          files: ./dist/*.zip
+      - name: Download artifacts
+        uses: ac
