--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,19 +49,21 @@ jobs:
       - name: Upload artifact (to pass to release job)
         uses: actions/upload-artifact@v4
         with:
-          name: bins
+          name: bins-${{ matrix.goos }}-${{ matrix.goarch }}
           path: "*.zip"
+          if-no-files-found: error
 
   release:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      contents: write   # required to create a GitHub Release and upload assets
+      contents: write
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: bins
+          pattern: bins-*
+          merge-multiple: true
           path: ./dist
 
       - name: Create GitHub Release
